# gehennabot

./: .gitignore  CHANGELOG.md  CHANGELOGS  Makefile  NOTAS.txt  baixar_deck.ipynb  decks-pre-construidos.ipynb  entradas-e-saidas.ipynb  estudo.ipynb  main.py  model.py  pyproject.toml  requirements-dev.txt  requirements.txt  service.py  sugestao-nome-deck.ipynb  util.py
config/: database.py
gehennabot/: api.py  cli.py  config.py  main.py  model.py  schemas.py  service.py  sources.py  util.py
gehennabot/data/: cardbase_crypt.json  cardbase_lib.json
